--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -32,33 +32,21 @@ p{
     column-gap:50px ;
 }
 .image{
+    display: block;
+    position: relative;
     width: 500px;
     z-index: 100;
+   
+   
     
 }
+
 .div{
     position: relative;
     z-index: 1000;
 }
 
-.form{
-    position: absolute;
-width: 500px;
-    right:-4px;
-    top: 27px;
-    transform: rotate(33deg);
-    z-index: -2;  
-    
-}
 
-.form1{
-    position: absolute;
-    width: 500px;
-    right:101px;
-    top: -10px;
-    transform: rotate(-234deg);
-     z-index: -10;
-}
 
 .content{
     max-width: 600px;
