--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -7,13 +7,39 @@
     font-weight: 700;
     padding: 24px 34px;
     outline: none;
-    border: none;
-    border-radius: 99px;
+   border:none;
+    border-radius: 100px;
     cursor: pointer;
-    transition: .5s ease-in all;
+    transition: .7s ease-in all;
+    z-index: 1;
+    position: relative;
 }
+
+.btn::before{
+  transition: .7s ease-in all;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  opacity: 0;
+  content: "";
+  background-color: #FFC5B1;
+ border:0.5px solid  var.$link;
+  z-index: -1;
+  border-radius: 100px;
+  outline: none;
+}
+
+
+
+
 .btn:hover{
-  transform:  translate3d(5px, -5px, -5px);
-  transition: .5s ease-in all;
+  color:var.$nav_link;
+  transition: .7s ease-in all;
  
+}
+.btn:hover::before{
+  transition: 0.7s all ease;
+  left: 0;right: 0;opacity: 1;
 }
