--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   padding: 0;
 }
 body{
-  height: 100%;
+  height: 100vh;
   font-size: 16px;
   background-color: rgb(254 249 245);     
   font-family: "Poppins", sans-serif;                           ;
