--- a/src/Pages/Contacts/Contacts.module.scss
+++ b/src/Pages/Contacts/Contacts.module.scss
@@ -1,18 +1,48 @@
 @use "../../styles/_vars" as var;
-.container{
-    max-width: 600px;
-    margin: 150px auto 20px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-
+.container {
+  max-width: 600px;
+  margin: 150px auto 20px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
 }
-.title{
-    font-size: 30px;
+.title {
+  display: flex;
+  justify-content: start;
+  gap: 12px;
+  align-items: center;
+  width: 440px;
+  height: 102px;
+  font-size: 30px;
+  transition: 0.7s ease all;
+  cursor: pointer;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
 }
 
-.mail{
-    color:black;
-    font-size: 20px;
+.title:hover {
+  transform: scale(1.1);
+  background-color: #f1ebeb;
+  border-radius: 20px;
+}
+.mail {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
+  width: 440px;
+  height: 102px;
+  color: var.$nav_link;
+  padding: 10px 20px;
+  font-size: 30px;
+  transition: 0.7s ease all;
+  border: 1px solid transparent;
+  margin-bottom: 10px;
+}
+.mail:hover {
+  transform: scale(1.1);
+  background-color: #f1ebeb;
+  border-radius: 20px;
 }
