--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,10 @@
 @use "../../styles/_vars" as var;
 nav {
   padding: 24px 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 40px;
 }
 .container {
   max-width: 1470px;
@@ -28,4 +32,31 @@ ul {
       color: var.$link;
     }
   }
+}
+.globe{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+border-radius: 50%;
+background-color: #fff;
+border:1px solid  rgb(66, 31, 219);
+padding: 8px;
+outline: none;
+transition: 0.7s ease all;
+  }
+.globe:hover{
+  border-color: #fced1b;
+  background-color: #e6e3e35b;
+}
+  
+button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+border-radius: 50%;
+background-color: #fff;
+border:1px solid  rgb(66, 31, 219);
+padding: 8px;
+outline: none;
+transition: 0.7s ease all;
 }
