--- a/src/Pages/Contacts/Contacts.module.css
+++ b/src/Pages/Contacts/Contacts.module.css
@@ -1,4 +1,4 @@
-@use "../../styles/_vars" as var;
+
 .container {
   max-width: 600px;
   margin: 150px auto 20px;
@@ -34,7 +34,7 @@
   gap: 5px;
   width: 440px;
   height: 102px;
-  color: var.$nav_link;
+  color: #374785;
   padding: 10px 20px;
   font-size: 30px;
   transition: 0.7s ease all;
