--- a/src/components/Socials/Socials.module.css
+++ b/src/components/Socials/Socials.module.css
@@ -15,3 +15,9 @@
   fill: #49c5b6;
   scale: 1.2;
 }/*# sourceMappingURL=Socials.module.css.map */
+
+@media screen and (max-width: 760px) {
+  .container{
+    margin: 50px auto 0;
+  }
+}
