--- a/src/Pages/About/About.module.css
+++ b/src/Pages/About/About.module.css
@@ -5,3 +5,15 @@
     padding: 50px 40px 20px;
     margin: 0 auto;
 }
+
+
+@media screen and (max-width: 440px) {
+.content{
+    padding:30px 20px 20px;
+}
+.content p{
+    font-size: 22px;
+    line-height: 26px;
+}
+
+}
