--- a/src/components/CardList/CardList.module.css
+++ b/src/components/CardList/CardList.module.css
@@ -1,14 +1,23 @@
 .inner {
-  margin: 100px auto;
-  display: grid;
+  margin: 50px auto;
+  /* display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 50px;
+  gap: 50px; */
   align-items: center;
   align-self: center;
 }
 
 .container {
   max-width: 1400px;
-  padding: 0 30px;
+  padding:5px 30px;
   margin: 0 auto;
-}/*# sourceMappingURL=CardList.module.css.map */
+} /*# sourceMappingURL=CardList.module.css.map */
+
+.slider_container {
+  max-width: 700px;
+  margin: 30px auto;
+  /* display: flex;
+   flex-direction: row;
+   justify-content: space-around; */
+}
+
