--- a/src/components/SkillList/SkillList.module.css
+++ b/src/components/SkillList/SkillList.module.css
@@ -2,7 +2,7 @@
     max-width: 900px;
     height: 100vh;
     height: 100%;
-    padding: 30px 20px;
+    padding: 30px 0;
     margin: 0 auto;
 }
 
@@ -12,4 +12,9 @@ justify-content: space-around;
 flex-wrap: wrap;
 gap: 20px;
 margin: 0 auto;
+}
+@media screen and (max-width: 440px) {
+    .box{
+        padding: 15px 0  ;
+    }
 }
