--- a/src/components/Socials/Socials.module.css
+++ b/src/components/Socials/Socials.module.css
@@ -14,7 +14,7 @@
 .icon svg:hover {
   fill: #49c5b6;
   scale: 1.2;
-}/*# sourceMappingURL=Socials.module.css.map */
+}
 
 @media screen and (max-width: 760px) {
   .container{
