--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -1,22 +1,44 @@
-.content{
-    max-width: 1270px;
-    height: 100%;
-    padding: 50px 40px 20px;
-    margin: 0 auto;
+.content {
+  max-width: 1270px;
+  height: 100%;
+  padding: 50px 40px 20px;
+  margin: 0 auto;
 }
-.list{
-    max-width: 900px;
-    padding: 10px 40px 20px;
-    margin: 0 auto;
+.list {
+  max-width: 900px;
+  padding: 0px 40px 30px;
+  margin: 0 auto;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 0; 
+  padding-top: 20px;
+}
+
+.span {
+  font-size: 30px;
+  color: #49c5b6;
+  font-weight: bold;
+  position: relative;
+}
+.span:before {
+  position: absolute;
+  top: 12px;
+  left: -28px;
+  content: "";
+  width: 22px;
+  height: 20px;
+  background-image: url(dots-light.svg);
+  background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 440px) {
-.content{
-    padding:30px 20px 20px;
-}
-.content p{
+  .content {
+    padding: 30px 20px 20px;
+  }
+  .content p {
     font-size: 22px;
     line-height: 26px;
-}
-
+  }
 }
