--- a/src/components/SkillCard/SkillCard.module.css
+++ b/src/components/SkillCard/SkillCard.module.css
@@ -10,9 +10,10 @@
     padding: 8px;
     border-radius: 15px;
     background-color: rgba(144, 154, 160, 0.548);
+    background-color: rgba(144, 154, 160, 0.233);
     border-color:#e5e7eb;
-    border-color:rgb(226 232 240);
     margin: 0 auto;
+    position: relative;
 
     img{
         align-items: center;
@@ -25,6 +26,36 @@
 .title{
     margin: 0;  
 }
+
+.inner::before {
+    transition: 0.7s ease-in all;
+    position: absolute;
+    left: 100%;
+    right: 100%;
+    top:0;
+    bottom: 0;
+    opacity: 0;
+    content: "";
+    background-color: #49c5b6;
+    border: 2px solid #49c5b6;
+    z-index: -1;
+    border-radius: 15px;
+    outline: none;
+  }
+  
+  .inner:hover {
+    color: #fff;
+    transition: 0.7s ease-in all;
+  }
+  
+  .inner:hover::before {
+    transition: 0.7s all ease;
+    left: 0;
+    right: 0;
+    opacity: 0.5;
+  }/*# sourceMappingURL=Button1.module.css.map */
+
+
 
 @media screen and (max-width: 400px) {
 
