--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -41,3 +41,11 @@
   right: 0;
   opacity: 1;
 }/*# sourceMappingURL=Button.module.css.map */
+
+@media screen and (max-width: 500px) {
+  .btn{
+    width: 200px;
+    font-size: 18px;
+    padding: 15px;
+  }
+}
