--- a/src/components/Button1/Button1.module.css
+++ b/src/components/Button1/Button1.module.css
@@ -42,3 +42,10 @@
   right: 0;
   opacity: 1;
 }/*# sourceMappingURL=Button1.module.css.map */
+@media screen and (max-width: 500px) {
+  .btn{
+    width: 130px;
+    font-size: 16px;
+    padding: 10px;
+  }
+}
