--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -12,20 +12,23 @@
 
 .title {
   text-align: center;
-  margin-bottom: 0; 
-  padding-top: 20px;
+  margin: 0 auto; 
+  padding: 20px 5px 0;
+    
 }
 
 .span {
+  margin-left: 10px;
   font-size: 30px;
   color: #49c5b6;
   font-weight: bold;
-  position: relative;
+  position: relative
+;
 }
 .span:before {
   position: absolute;
   top: 12px;
-  left: -28px;
+  left: -26px;
   content: "";
   width: 22px;
   height: 20px;
