--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -49,7 +49,10 @@
 
 
   @media screen and (max-width: 760px) {
+    .footer{
+      padding: 5px 5px 15px;
+    }
     .container{
-      margin: 50px auto 0;
+      margin: 30px auto 10px;
     }
   }
