--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -12,8 +12,8 @@ h2 {
 
 h1 {
   color: #374785;
- font-size: clamp(2.5rem, 0.125rem + 5vw, 4.5rem);
-  line-height: clamp(3rem, 0.625rem + 5vw, 5rem);
+ font-size: clamp(2rem, 1.12rem + 3.76vw, 4.5rem);
+  line-height:clamp(2.375rem, 1.319rem + 4.51vw, 5.375rem);
   margin: 0 0 16px;
 }
 
@@ -91,5 +91,11 @@ p {
   }
   .scrollDown{
     margin: 10px auto;
+  }
+}
+@media screen and (max-width: 375px) {
+  h1{
+    font-size: 32px;
+    line-height: 38px;
   }
 }
