--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -38,10 +38,13 @@
 
 @media screen and (max-width: 440px) {
   .content {
-    padding: 30px 20px 20px;
+    padding: 30px 15px 20px;
   }
   .content p {
     font-size: 22px;
-    line-height: 26px;
+    line-height: 28px;
+  }
+  .list{
+    padding:  0px 20px 20px;;
   }
 }
